--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "morgan": "^1.9.1",
     "node-sass-middleware": "^0.11.0",
     "pg": "^8.5.0",
-    "pg-native": "^3.0.0"
+    "pg-native": "^3.0.0",
+    "sortablejs": "^1.13.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
