--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
   "author": "Lighthouse Labs",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "chalk": "^2.4.2",
     "dotenv": "^2.0.0",
     "ejs": "^2.6.2",
     "express": "^4.17.1",
     "morgan": "^1.9.1",
-    "node-sass-middleware": "^0.9.8",
+    "node-sass-middleware": "^0.11.0",
     "pg": "^8.5.0",
     "pg-native": "^3.0.0",
     "sortablejs": "^1.13.0"
